cluster-apps/argocd/base/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  # The <namespace>/<name> of the gateway(s) to use.
  # Allows using a centralized gateway, without requiring control over it.
  gateways:
  - istio-ingress/cluster-ingress-gateway
  # The public domain to reach this service.
  hosts:
  - "argocd.cluster.divergent.codes"
  http:
  - match:
    # Every path for this domain will be routed to the service.
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
